Apply tebdex transformation