@@ -4,6 +4,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 public class WeatherApiClient {
@@ -14,7 +15,7 @@ public class WeatherApiClient {
         HttpURLConnection connection = null;
         try {
             // Create a URL object with the API endpoint
-            URL url = new URL(API_URL);
+            URL url = URI.create(API_URL).toURL();
 
             // Open a connection to the API URL
             connection = (HttpURLConnection) url.openConnection();
